# Python.Trading.Telegram.Declarative

./: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  generate_architecture_diagram.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
new/: bot-one-args.py
src/Python.Trading.Telegram.Declarative.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/python_trading_telegram_declarative/: base.py  client.py  handler.py  history.py  message_queue.py  notification.py  service.py
src/python_trading_telegram_declarative.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/python_trading_telegram_declarative/classes/: command.py  menu.py  types.py
src/venantvr/telegram/: base.py  history.py  service.py
src/venantvr/telegram/classes/: command.py  menu.py  types.py
tests/: bot-no-args.py  bot-one-args.py  bot-two-args.py  handler.py  test_client.py  test_helpers.py  test_message_queue.py  test_service.py
venantvr/telegram/: base.py  bot.py  client.py  commands.py  decorators.py  handler.py  history.py  message_queue.py  notification.py  service.py
venantvr/telegram/classes/: command.py  enums.py  menu.py  payload.py  types.py
venantvr/telegram/tools/: logger.py  utils.py
