[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "python_trading_telegram_declarative"
version = "0.1.0"
description = "Une bibliothèque Python pour Telegram."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests~=2.32.4",
]
authors = [
    { name = "venantvr", email = "venantvr@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/venantvr/Python.Trading.Telegram.Declarative"
Repository = "https://github.com/venantvr/Python.Trading.Telegram.Declarative.git"
Issues = "https://github.com/venantvr/Python.Trading.Telegram.Declarative/issues"
Documentation = "https://github.com/venantvr/Python.Trading.Telegram.Declarative#readme"

[project.optional-dependencies]
dev = [
    "setuptools~=80.9.0",
    "wheel",
    "pytest~=8.3.0",
    "pytest-mock~=3.14.0",
    "unittest-xml-reporting~=3.2.0",
    "black~=24.8.0",
    "flake8~=7.1.0",
    "mypy~=1.11.0",
    "pylint~=3.2.0",
    "isort~=5.13.0",
    "pre-commit~=3.8.0",
    "sphinx~=7.4.0",
    "pdoc~=14.6.0",
    "pip-audit~=2.7.0",
    "watchdog~=4.0.0",
    "pipdeptree~=2.23.0",
    "ipython~=8.26.0",
]

[tool.setuptools.packages.find]
where = [
    "src",
]
include = [
    "python_trading_telegram_declarative*",
]
exclude = [
    "tests*",
    "docs*",
]

[tool.setuptools.package-data]
"*" = [
    "py.typed",
]
